Worked on CRUd Stuff I think almost at a good point Still need Delete Implementation